--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@depay/web3-wordpress-depay-payments",
   "moduleName": "WordpressDePayPayments",
-  "version": "2.4.5",
-  "description": "Accept Web3 payments, supporting various cryptocurrency tokens and wallets, with the DePay Payments extension for Wordpress. MetaMask, Phantom, USDC, USDT, ETH, SOL, BSC, POL, xDAI...",
+  "version": "2.4.6",
+  "description": "Accept Web3 Payments, supporting various cryptocurrency tokens and wallets: MetaMask, Phantom, USDC, USDT, ETH, SOL, BSC, POL...",
   "main": "./dist/umd/index.js",
   "module": "./dist/esm/index.js",
   "files": [
@@ -40,7 +40,7 @@
     "@babel/preset-react": "^7.12.7",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.3",
-    "@rollup/plugin-replace": "^2.4.5",
+    "@rollup/plugin-replace": "^2.4.6",
     "@rollup/plugin-sucrase": "^3.1.0",
     "babel-loader": "^8.2.2",
     "babel-preset-env": "^1.7.0",
