--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@depay/web3-wordpress-depay",
   "moduleName": "WordpressDePayPayments",
-  "version": "3.0.4",
+  "version": "3.1.0",
   "description": "Accept Web3 Crypto Payments & Donations. Supports various tokens, blockchains and wallets. MetaMask, Phantom, USDC, USDT, ETH, SOL, BSC, POL, xDAI…",
   "main": "./dist/umd/index.js",
   "module": "./dist/esm/index.js",
@@ -28,8 +28,8 @@
   "homepage": "https://github.com/DePayFi/web3-wordpress-depay#readme",
   "private": false,
   "dependencies": {
-    "@depay/web3-blockchains": "^8.0.3",
-    "@depay/widgets": "^11.3.0"
+    "@depay/web3-blockchains": "^9.8.6",
+    "@depay/widgets": "^13.0.22"
   },
   "engines": {
     "node": ">=16"
@@ -39,8 +39,8 @@
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
     "@rollup/plugin-commonjs": "^18.0.0",
-    "@rollup/plugin-node-resolve": "^11.2.3",
-    "@rollup/plugin-replace": "^2.4.7",
+    "@rollup/plugin-node-resolve": "^11.2.1",
+    "@rollup/plugin-replace": "^2.4.2",
     "@rollup/plugin-sucrase": "^3.1.0",
     "babel-loader": "^8.2.2",
     "babel-preset-env": "^1.7.0",
@@ -62,5 +62,9 @@
     "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "webpack": "^5.74.0"
+  },
+  "resolutions": {
+    "color-name": "1.1.4",
+    "is-regex": "1.2.1"
   }
 }
